@@ -55,7 +55,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::NextRelease" => 0,
     "Dist::Zilla::Plugin::PPPort" => 0,
     "Dist::Zilla::Plugin::PodSyntaxTests" => 0,
-    "Dist::Zilla::Plugin::PromptIfStale" => 0,
+    "Dist::Zilla::Plugin::PromptIfStale" => "0.050",
     "Dist::Zilla::Plugin::ReadmeAnyFromPod" => 0,
     "Dist::Zilla::Plugin::RunExtraTests" => 0,
     "Dist::Zilla::Plugin::SurgicalPodWeaver" => 0,
@@ -158,7 +158,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::NextRelease" => 0,
   "Dist::Zilla::Plugin::PPPort" => 0,
   "Dist::Zilla::Plugin::PodSyntaxTests" => 0,
-  "Dist::Zilla::Plugin::PromptIfStale" => 0,
+  "Dist::Zilla::Plugin::PromptIfStale" => "0.050",
   "Dist::Zilla::Plugin::ReadmeAnyFromPod" => 0,
   "Dist::Zilla::Plugin::RunExtraTests" => 0,
   "Dist::Zilla::Plugin::SurgicalPodWeaver" => 0,
