@@ -29,7 +29,7 @@ requires "Dist::Zilla::Plugin::MojibakeTests" => "0";
 requires "Dist::Zilla::Plugin::NextRelease" => "0";
 requires "Dist::Zilla::Plugin::PPPort" => "0";
 requires "Dist::Zilla::Plugin::PodSyntaxTests" => "0";
-requires "Dist::Zilla::Plugin::PromptIfStale" => "0";
+requires "Dist::Zilla::Plugin::PromptIfStale" => "0.050";
 requires "Dist::Zilla::Plugin::ReadmeAnyFromPod" => "0";
 requires "Dist::Zilla::Plugin::RunExtraTests" => "0";
 requires "Dist::Zilla::Plugin::SurgicalPodWeaver" => "0";
@@ -125,6 +125,7 @@ on 'develop' => sub {
   requires "Test::Pod::Coverage" => "1.08";
   requires "Test::Pod::LinkCheck" => "0";
   requires "Test::Pod::No404s" => "0";
+  requires "Test::Portability::Files" => "0";
   requires "Test::Spelling" => "0.12";
   requires "Test::Vars" => "0.009";
   requires "Test::Version" => "1";
