@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- Only run PromptIfStale for release phase.
+
+
 0.61     2016-06-05
 
 - Don't include GitHub::Meta when running under Travis.
